--- a/pom.xml
+++ b/pom.xml
@@ -20,12 +20,12 @@
   </properties>
 
   <dependencies>
-    <dependency>
+    <!-- <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
       <version>3.8.1</version>
       <scope>test</scope>
-    </dependency>
+    </dependency> -->
     
     <dependency>
 	    <groupId>org.springframework.boot</groupId>
@@ -45,6 +45,13 @@
 	<dependency>
 		<groupId>org.flywaydb</groupId>
 		<artifactId>flyway-core</artifactId>
+	</dependency>
+	
+	<!-- testing -->
+	<dependency>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-test</artifactId>
+		<scope>test</scope>
 	</dependency>
 	
   </dependencies>
